# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "day01"
version = "0.1.0"
edition = "2021"
authors = ["Sheldon Young <sheldon@softdev.ca>"]
license = "MIT"

# Prevent accidentally publishing to crates.io
publish = false

[dependencies]
#clap = { version = "4.4", features = ["cargo", "derive", "unicode", "wrap_help"] }
#log = "0.4"
